// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tests snapshot shows pat 1`] = `
<form
  className="sc-bdnylx ljPwdE"
  name="register"
  noValidate={true}
>
  <input
<<<<<<< HEAD
    className="sc-gtssRu jigLkO"
=======
    className="sc-gtssRu kTOxiL"
>>>>>>> submaster
    name="name"
    onChange={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    placeholder="Nome e sobrenome"
    style={
      Object {
        "border": "2px solid #70a3ef",
      }
    }
  />
  <input
<<<<<<< HEAD
    className="sc-gtssRu jigLkO"
=======
    className="sc-gtssRu kTOxiL"
>>>>>>> submaster
    name="email"
    onChange={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    placeholder="E-mail"
    style={
      Object {
        "border": "2px solid #70a3ef",
      }
    }
    type="email"
  />
  <input
<<<<<<< HEAD
    className="sc-gtssRu jigLkO"
=======
    className="sc-gtssRu kTOxiL"
>>>>>>> submaster
    name="confirmEmail"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    placeholder="Confirmar E-mail"
    style={
      Object {
        "border": "2px solid #70a3ef",
      }
    }
    type="email"
  />
  <input
<<<<<<< HEAD
    className="sc-gtssRu jigLkO"
=======
    className="sc-gtssRu kTOxiL"
>>>>>>> submaster
    maxLength={15}
    name="phone"
    onChange={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    placeholder="Telefone (opcional)"
    style={
      Object {
        "border": "2px solid #70a3ef",
      }
    }
    type="tel"
  />
  <input
<<<<<<< HEAD
    className="sc-gtssRu jigLkO"
=======
    className="sc-gtssRu kTOxiL"
>>>>>>> submaster
    maxLength={18}
    name="cpf_cnpj"
    onChange={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    placeholder="CPF/CNPJ"
    style={
      Object {
        "border": "2px solid #70a3ef",
      }
    }
  />
  <input
<<<<<<< HEAD
    className="sc-gtssRu jigLkO"
=======
    className="sc-gtssRu kTOxiL"
>>>>>>> submaster
    name="password"
    onChange={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    placeholder="Senha"
    style={
      Object {
        "border": "2px solid #70a3ef",
      }
    }
    type="password"
  />
  <input
<<<<<<< HEAD
    className="sc-gtssRu jigLkO"
=======
    className="sc-gtssRu kTOxiL"
>>>>>>> submaster
    name="confirmPassword"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    placeholder="Confirmar Senha"
    style={
      Object {
        "border": "2px solid #70a3ef",
      }
    }
    type="password"
  />
  <div
    style={
      Object {
        "margin": "10px",
      }
    }
  >
    <button
<<<<<<< HEAD
      className="sc-dlnjPT gwzrKe"
      data-text="Register"
      fontSize="19px"
      height="40px"
      onClick={true}
=======
      className="sc-dlnjPT jJgUMU"
      data-text="Register"
      fontSize="19px"
      height="40px"
      onClick={[Function]}
>>>>>>> submaster
      width="150px"
    >
      <span>
        R
      </span>
      <span>
        e
      </span>
      <span>
        g
      </span>
      <span>
        i
      </span>
      <span>
        s
      </span>
      <span>
        t
      </span>
      <span>
        e
      </span>
      <span>
        r
      </span>
    </button>
  </div>
</form>
`;

exports[`Tests snapshot shows psi 1`] = `
<form
  className="sc-bdnylx ljPwdE"
  name="register"
  noValidate={true}
>
  <input
<<<<<<< HEAD
    className="sc-gtssRu jigLkO"
=======
    className="sc-gtssRu kTOxiL"
>>>>>>> submaster
    name="name"
    onChange={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    placeholder="Nome e sobrenome"
    style={
      Object {
        "border": "2px solid #70a3ef",
      }
    }
  />
  <input
<<<<<<< HEAD
    className="sc-gtssRu jigLkO"
=======
    className="sc-gtssRu kTOxiL"
>>>>>>> submaster
    name="email"
    onChange={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    placeholder="E-mail"
    style={
      Object {
        "border": "2px solid #70a3ef",
      }
    }
    type="email"
  />
  <input
<<<<<<< HEAD
    className="sc-gtssRu jigLkO"
=======
    className="sc-gtssRu kTOxiL"
>>>>>>> submaster
    name="confirmEmail"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    placeholder="Confirmar E-mail"
    style={
      Object {
        "border": "2px solid #70a3ef",
      }
    }
    type="email"
  />
  <input
<<<<<<< HEAD
    className="sc-gtssRu jigLkO"
=======
    className="sc-gtssRu kTOxiL"
>>>>>>> submaster
    maxLength={15}
    name="phone"
    onChange={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    placeholder="Telefone (opcional)"
    style={
      Object {
        "border": "2px solid #70a3ef",
      }
    }
    type="tel"
  />
  <input
<<<<<<< HEAD
    className="sc-gtssRu jigLkO"
=======
    className="sc-gtssRu kTOxiL"
>>>>>>> submaster
    maxLength={18}
    name="cpf_cnpj"
    onChange={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    placeholder="CPF/CNPJ"
    style={
      Object {
        "border": "2px solid #70a3ef",
      }
    }
  />
  <input
<<<<<<< HEAD
    className="sc-gtssRu jigLkO"
=======
    className="sc-gtssRu kTOxiL"
>>>>>>> submaster
    maxLength={8}
    name="crp"
    onChange={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    placeholder="CRP"
    style={
      Object {
        "border": "2px solid #70a3ef",
      }
    }
  />
  <input
<<<<<<< HEAD
    className="sc-gtssRu jigLkO"
=======
    className="sc-gtssRu kTOxiL"
>>>>>>> submaster
    name="password"
    onChange={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    placeholder="Senha"
    style={
      Object {
        "border": "2px solid #70a3ef",
      }
    }
    type="password"
  />
  <input
<<<<<<< HEAD
    className="sc-gtssRu jigLkO"
=======
    className="sc-gtssRu kTOxiL"
>>>>>>> submaster
    name="confirmPassword"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    placeholder="Confirmar Senha"
    style={
      Object {
        "border": "2px solid #70a3ef",
      }
    }
    type="password"
  />
  <div
    style={
      Object {
        "margin": "10px",
      }
    }
  >
    <button
<<<<<<< HEAD
      className="sc-dlnjPT gwzrKe"
      data-text="Register"
      fontSize="19px"
      height="40px"
      onClick={true}
=======
      className="sc-dlnjPT jJgUMU"
      data-text="Register"
      fontSize="19px"
      height="40px"
      onClick={[Function]}
>>>>>>> submaster
      width="150px"
    >
      <span>
        R
      </span>
      <span>
        e
      </span>
      <span>
        g
      </span>
      <span>
        i
      </span>
      <span>
        s
      </span>
      <span>
        t
      </span>
      <span>
        e
      </span>
      <span>
        r
      </span>
    </button>
  </div>
</form>
`;
